AMBARI-21323.Hive view 2.0-UI issues on IE11 +Win 7(Venkata Sairam)

--- a/contrib/views/hive20/src/main/resources/ui/app/styles/app.scss
+++ b/contrib/views/hive20/src/main/resources/ui/app/styles/app.scss
@@ -835,6 +835,7 @@ ul.dropdown-menu {
 }
 
 .break-word{
+  display: inline-block;
   word-break: break-all;
 }
 
